--- a/Demo/Views/Shared/_Layout.cshtml
+++ b/Demo/Views/Shared/_Layout.cshtml
@@ -17,36 +17,17 @@
         </environment>
     </head>
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Demo</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <partial name="_CookieConsentPartial" />
-
-        <div class="container body-content">
-            @RenderBody()
-            <hr />
-            <footer>
-                <p>&copy; 2019 - Demo</p>
-            </footer>
+        <img src="~/images/logo.png" width="50px">
+        <div class="my-nav">
+            <a href="javascript::void(0)" class="router-link-exact-active router-link-active">Todo</a>
+            <a href="javascript::void(0)" class="">Shop</a>
         </div>
+
+        <div class="container">
+            @RenderBody()
+
+        </div>
+
 
         <environment include="Development">
             <script src="~/lib/jquery/dist/jquery.js"></script>
