--- a/Demo/Views/Shared/_Layout.cshtml
+++ b/Demo/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <body>
         <img src="~/images/logo.png" width="50px">
         <div class="my-nav">
-            <a href="javascript::void(0)" class="router-link-exact-active router-link-active">Todo</a>
+            <a href="@Url.Action("ToDo")" class="router-link-exact-active router-link-active">Todo</a>
             <a href="javascript::void(0)" class="">Shop</a>
         </div>
 
@@ -32,6 +32,7 @@
         <environment include="Development">
             <script src="~/lib/jquery/dist/jquery.js"></script>
             <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+            <script src="~/lib/knockout-3.4.2.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>
         </environment>
         <environment exclude="Development">
@@ -47,6 +48,7 @@
                     crossorigin="anonymous"
                     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
             </script>
+            <script src="~/lib/knockout-3.4.2.js"></script>
             <script src="~/js/site.min.js" asp-append-version="true"></script>
         </environment>
 
